// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button — Style Regression Snapshots > Full slot structure > renders all slots — leading icon, children, trailing icon 1`] = `
<button
  class="d_inline-flex ai_center jc_center gap_2 p_4 bdr_2 fw_semibold fs_base cursor_pointer bd-w_[1px] border-style_solid bd-c_transparent disabled:op_[0.5] disabled:cursor_not-allowed disabled:pointer-events_none bg-c_primary.500 c_neutral.0 hover:bg-c_primary.600 active:bg-c_primary.700 dark:bg-c_primary.700 dark:c_neutral.0 dark:hover:bg-c_primary.800 dark:active:bg-c_primary.900 button__root"
  type="button"
>
  <span
    aria-hidden="true"
    class="d_inline-flex ai_center flex-sh_[0] button__icon"
  >
    <svg
      aria-hidden="true"
      data-testid="leading"
    />
  </span>
  <span
    class="lh_normal button__label"
  >
    Settings
  </span>
  <span
    aria-hidden="true"
    class="d_inline-flex ai_center flex-sh_[0] button__icon"
  >
    <svg
      aria-hidden="true"
      data-testid="trailing"
    />
  </span>
</button>
`;

exports[`Button — Style Regression Snapshots > Full slot structure > renders all slots — loading with leading icon 1`] = `
<button
  aria-busy="true"
  class="d_inline-flex ai_center jc_center gap_2 p_4 bdr_2 fw_semibold fs_base cursor_pointer bd-w_[1px] border-style_solid bd-c_transparent disabled:op_[0.5] disabled:cursor_not-allowed disabled:pointer-events_none bg-c_primary.500 c_neutral.0 hover:bg-c_primary.600 active:bg-c_primary.700 dark:bg-c_primary.700 dark:c_neutral.0 dark:hover:bg-c_primary.800 dark:active:bg-c_primary.900 button__root"
  data-loading="true"
  disabled=""
  type="button"
>
  <span
    aria-hidden="true"
    class="d_inline-flex ai_center flex-sh_[0] button__icon"
  >
    <svg
      aria-hidden="true"
      data-testid="leading"
    />
  </span>
  <span
    aria-label="Loading"
    class="d_inline-flex ai_center flex-sh_[0] button__spinner"
    role="status"
  >
    ⟳
  </span>
  <span
    class="lh_normal button__label"
  >
    Saving…
  </span>
</button>
`;

exports[`Button — Style Regression Snapshots > States > renders disabled + ghost variant 1`] = `
<button
  class="d_inline-flex ai_center jc_center gap_2 p_4 bdr_2 fw_semibold fs_base cursor_pointer bd-w_[1px] border-style_solid bd-c_transparent disabled:op_[0.5] disabled:cursor_not-allowed disabled:pointer-events_none bg-c_transparent c_primary.500 hover:bg-c_primary.50 active:bg-c_primary.100 dark:c_primary.300 dark:hover:bg-c_primary.900 dark:active:bg-c_primary.800 button__root"
  disabled=""
  type="button"
>
  <span
    class="lh_normal button__label"
  >
    Submit
  </span>
</button>
`;

exports[`Button — Style Regression Snapshots > States > renders disabled state 1`] = `
<button
  class="d_inline-flex ai_center jc_center gap_2 p_4 bdr_2 fw_semibold fs_base cursor_pointer bd-w_[1px] border-style_solid bd-c_transparent disabled:op_[0.5] disabled:cursor_not-allowed disabled:pointer-events_none bg-c_primary.500 c_neutral.0 hover:bg-c_primary.600 active:bg-c_primary.700 dark:bg-c_primary.700 dark:c_neutral.0 dark:hover:bg-c_primary.800 dark:active:bg-c_primary.900 button__root"
  disabled=""
  type="button"
>
  <span
    class="lh_normal button__label"
  >
    Submit
  </span>
</button>
`;

exports[`Button — Style Regression Snapshots > States > renders loading + outline variant 1`] = `
<button
  aria-busy="true"
  class="d_inline-flex ai_center jc_center gap_2 p_4 bdr_2 fw_semibold fs_base cursor_pointer bd-w_[1px] border-style_solid bd-c_primary.500 disabled:op_[0.5] disabled:cursor_not-allowed disabled:pointer-events_none bg-c_transparent c_primary.500 hover:bg-c_primary.50 active:bg-c_primary.100 dark:c_primary.300 dark:bd-c_primary.300 dark:hover:bg-c_primary.900 dark:active:bg-c_primary.800 button__root"
  data-loading="true"
  disabled=""
  type="button"
>
  <span
    aria-label="Loading"
    class="d_inline-flex ai_center flex-sh_[0] button__spinner"
    role="status"
  >
    ⟳
  </span>
  <span
    class="lh_normal button__label"
  >
    Saving…
  </span>
</button>
`;

exports[`Button — Style Regression Snapshots > States > renders loading state — spinner slot visible, button disabled 1`] = `
<button
  aria-busy="true"
  class="d_inline-flex ai_center jc_center gap_2 p_4 bdr_2 fw_semibold fs_base cursor_pointer bd-w_[1px] border-style_solid bd-c_transparent disabled:op_[0.5] disabled:cursor_not-allowed disabled:pointer-events_none bg-c_primary.500 c_neutral.0 hover:bg-c_primary.600 active:bg-c_primary.700 dark:bg-c_primary.700 dark:c_neutral.0 dark:hover:bg-c_primary.800 dark:active:bg-c_primary.900 button__root"
  data-loading="true"
  disabled=""
  type="button"
>
  <span
    aria-label="Loading"
    class="d_inline-flex ai_center flex-sh_[0] button__spinner"
    role="status"
  >
    ⟳
  </span>
  <span
    class="lh_normal button__label"
  >
    Saving…
  </span>
</button>
`;

exports[`Button — Style Regression Snapshots > Themes > renders inside dark theme context 1`] = `
<div
  data-theme="dark"
>
  <button
    class="d_inline-flex ai_center jc_center gap_2 p_4 bdr_2 fw_semibold fs_base cursor_pointer bd-w_[1px] border-style_solid bd-c_transparent disabled:op_[0.5] disabled:cursor_not-allowed disabled:pointer-events_none bg-c_primary.500 c_neutral.0 hover:bg-c_primary.600 active:bg-c_primary.700 dark:bg-c_primary.700 dark:c_neutral.0 dark:hover:bg-c_primary.800 dark:active:bg-c_primary.900 button__root"
    type="button"
  >
    <span
      class="lh_normal button__label"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`Button — Style Regression Snapshots > Themes > renders inside light theme context 1`] = `
<div
  data-theme="light"
>
  <button
    class="d_inline-flex ai_center jc_center gap_2 p_4 bdr_2 fw_semibold fs_base cursor_pointer bd-w_[1px] border-style_solid bd-c_transparent disabled:op_[0.5] disabled:cursor_not-allowed disabled:pointer-events_none bg-c_primary.500 c_neutral.0 hover:bg-c_primary.600 active:bg-c_primary.700 dark:bg-c_primary.700 dark:c_neutral.0 dark:hover:bg-c_primary.800 dark:active:bg-c_primary.900 button__root"
    type="button"
  >
    <span
      class="lh_normal button__label"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`Button — Style Regression Snapshots > Themes > renders outline variant inside dark theme context 1`] = `
<div
  data-theme="dark"
>
  <button
    class="d_inline-flex ai_center jc_center gap_2 p_4 bdr_2 fw_semibold fs_base cursor_pointer bd-w_[1px] border-style_solid bd-c_primary.500 disabled:op_[0.5] disabled:cursor_not-allowed disabled:pointer-events_none bg-c_transparent c_primary.500 hover:bg-c_primary.50 active:bg-c_primary.100 dark:c_primary.300 dark:bd-c_primary.300 dark:hover:bg-c_primary.900 dark:active:bg-c_primary.800 button__root"
    type="button"
  >
    <span
      class="lh_normal button__label"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`Button — Style Regression Snapshots > Variants > renders default (no variant prop) identically to solid 1`] = `
<button
  class="d_inline-flex ai_center jc_center gap_2 p_4 bdr_2 fw_semibold fs_base cursor_pointer bd-w_[1px] border-style_solid bd-c_transparent disabled:op_[0.5] disabled:cursor_not-allowed disabled:pointer-events_none bg-c_primary.500 c_neutral.0 hover:bg-c_primary.600 active:bg-c_primary.700 dark:bg-c_primary.700 dark:c_neutral.0 dark:hover:bg-c_primary.800 dark:active:bg-c_primary.900 button__root"
  type="button"
>
  <span
    class="lh_normal button__label"
  >
    Submit
  </span>
</button>
`;

exports[`Button — Style Regression Snapshots > Variants > renders ghost variant 1`] = `
<button
  class="d_inline-flex ai_center jc_center gap_2 p_4 bdr_2 fw_semibold fs_base cursor_pointer bd-w_[1px] border-style_solid bd-c_transparent disabled:op_[0.5] disabled:cursor_not-allowed disabled:pointer-events_none bg-c_transparent c_primary.500 hover:bg-c_primary.50 active:bg-c_primary.100 dark:c_primary.300 dark:hover:bg-c_primary.900 dark:active:bg-c_primary.800 button__root"
  type="button"
>
  <span
    class="lh_normal button__label"
  >
    Submit
  </span>
</button>
`;

exports[`Button — Style Regression Snapshots > Variants > renders outline variant 1`] = `
<button
  class="d_inline-flex ai_center jc_center gap_2 p_4 bdr_2 fw_semibold fs_base cursor_pointer bd-w_[1px] border-style_solid bd-c_primary.500 disabled:op_[0.5] disabled:cursor_not-allowed disabled:pointer-events_none bg-c_transparent c_primary.500 hover:bg-c_primary.50 active:bg-c_primary.100 dark:c_primary.300 dark:bd-c_primary.300 dark:hover:bg-c_primary.900 dark:active:bg-c_primary.800 button__root"
  type="button"
>
  <span
    class="lh_normal button__label"
  >
    Submit
  </span>
</button>
`;

exports[`Button — Style Regression Snapshots > Variants > renders solid variant (default) 1`] = `
<button
  class="d_inline-flex ai_center jc_center gap_2 p_4 bdr_2 fw_semibold fs_base cursor_pointer bd-w_[1px] border-style_solid bd-c_transparent disabled:op_[0.5] disabled:cursor_not-allowed disabled:pointer-events_none bg-c_primary.500 c_neutral.0 hover:bg-c_primary.600 active:bg-c_primary.700 dark:bg-c_primary.700 dark:c_neutral.0 dark:hover:bg-c_primary.800 dark:active:bg-c_primary.900 button__root"
  type="button"
>
  <span
    class="lh_normal button__label"
  >
    Submit
  </span>
</button>
`;
